demo/env1.yaml
# Front-end envoy proxy feeding HTTP to an AMQP Dispatch router
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: http_in
    address:
      socket_address: { address: 0.0.0.0, port_value: 8000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: http_in
          route_config:
            virtual_hosts:
            - name: localhost
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: amqp_out }
          http_filters:
          - name: envoy.router
            config: {}

  clusters:

  - name: amqp_out
    filters:
    - name: envoy.filters.network.amqp_client
      config: { request_relay: "http-relay", container_id: "env1" }
    connect_timeout: 1000s
    type: STATIC
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 5672 }}]
