demo/env3.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9902 }

static_resources:
  listeners:
  - name: amqp_in
    address:
      socket_address: { address: 0.0.0.0, port_value: 15672 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.amqp_server
        config: { request_relay: "http-relay", container_id: "env3" }
      - name: envoy.http_connection_manager
        config:
          stat_prefix: amqp_in
          route_config:
            virtual_hosts:
            - name: localhost
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: http_out }
          http_filters:
          - name: envoy.router
            config: {}

  clusters:

  - name: http_out
    connect_timeout: 1000s
    type: STATIC
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 80 }}]
