demo/envoy-front.yaml
# Envoy proxy feeding HTTP requests to a dispatch router
#
# SUMMARY:
#  localhost:8000/*      -> dispatch router
#  127.0.0.1:8000/       -> redhat.com direct (vhost match)
#  localhost:8000/server -> example AMQP server direct

static_resources:
  # Envoy calls outgoing connections "clusters"
  clusters:
  - name: amqp_router           # AMQP to router
    filters:
    # Configure as AMQP client to qdrouterd
    - name: envoy.filters.network.amqp_client
      # Relay HTTP over this AMQP address - message 'to' address carries URL
      config: { bridge: { named_relay: "http-relay" } }
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 5672 }}]
    type: static
    connect_timeout: 0.25s

  - name: redhat                # Normal HTTP to redhat.com
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: v4_only
    hosts: [{ socket_address: { address: www.redhat.com, port_value: 80 }}]

  - name: amqp_server           # AMQP direct to C++ example server
    filters:
    # Configure as AMQP client to C++ example server_direct.
    # Example modified to create reply link, we could also configure it here.
    - name: envoy.filters.network.amqp_client
    connect_timeout: 0.25s
    type: static
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 10001 }}]

  # Remaining config is standard Envoy HTTP routing
  listeners:
  - name: http_in
    address: { socket_address: { address: 0.0.0.0, port_value: 8000 } }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          # Envoy routing table
          route_config:
            virtual_hosts:

            - name: routed
              domains: ["localhost:8000"]
              routes:
              - match: { prefix: "/server" }
                route: { cluster: amqp_server }
              - match: { prefix: "/" }
                route: { cluster: amqp_router }

            - name: redhat_direct
              domains: ["127.0.0.1:8000"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: redhat, auto_host_rewrite: true }

          http_filters:
          - name: envoy.router
            config: {}
          stat_prefix: http_in

# Envoy boilerplate
admin:
  access_log_path: /tmp/envoy-front-access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
